deployments/production/starter-kit-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: todo
  labels:
    app: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: users
            - name: MYSQL_HOST
              value: external-mysql.default.svc
            - name: MYSQL_PORT
              value: "3306"
            - name: MYSQL_ROOT_PASSWORD
              value: root
            - name: MYSQL_USER
              value: root
          image: pepeunlimited/todo:0.1
          name: todo
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
