deployments/production/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: ingress-nginx
spec:
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 8000
  selector:
    app: app
