deployments/production/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-app
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: http://nginx-jwt.ingress-nginx.svc.cluster.local:8000/verify
spec:
  rules:
    - host: app.com
      http:
        paths:
          - backend:
              serviceName: app
              servicePort: 8000
            path: /
